# crosshair

./: .gitignore  README.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  CrosshairOverlayApp.tsx  index.css  overlay-entry.tsx  overlay.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: CrosshairCanvas.tsx  SettingsPanel.tsx
src/hooks/: useHotkeys.ts  usePresets.ts  useTray.ts
src/i18n/: en.ts  index.tsx  zh.ts
src/types/: crosshair.ts
